# Tab-Memory-Optimization-in-C-

./: CMakeLists.txt  README.md
include/: ContextEngine.hpp  ProcessManager.hpp  SystemMonitor.hpp  TabController.hpp
src/: ContextEngine.cpp  ProcessManager.cpp  SystemMonitor.cpp  TabController.cpp  main.cpp
